<resources>
    <string name="app_name">blood-pressure</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="guest_mode">Guest mode</string>
    <string name="log_in_with_google">log in with google</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="pulse">Pulse</string>
    <string name="optional_note">Optional note</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="diastolic">Diastolic</string>
    <string name="systolic">Systolic</string>
</resources>